# neu-cs5330-real-time-filtering

./: CMakeLists.txt  readme.md  run.sh
src/: filter.cpp  filter.hpp  imgDisplay.cpp  util.cpp  util.hpp  vidDisplay.cpp
